Form validation in progress

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -60,11 +60,11 @@
               name="reserve"
               action="index.html"
               method="get"
-              onsubmit="return validate();"
+              onsubmit="return validate(e);"
             >
               <div
                 class="formData">
-                <label for="first">Prénom</label><br>
+                <label for="first" class="prenom">Prénom</label><br>
                 <input
                   class="text-control"
                   type="text"
