--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -60,7 +60,7 @@
               name="reserve"
               action="index.html"
               method="get"
-              onsubmit="return validate(e);"
+              onsubmit="return validate();"
             >
               <div
                 class="formData">
@@ -72,6 +72,7 @@
                   name="first"
                   minlength="2"
                 /><br>
+                <div class="error firstError"></div>
               </div>
               <div
                 class="formData">
