Add text conditions

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -207,6 +207,10 @@
                 value="C'est parti"
               />
             </form>
+            <div class="form-confirmation">
+                <p>Merci ! Votre réservation a été reçue.</p>
+                <button class="btn-confirmation btn-submit">Fermer</button>
+              </div>
           </div>
         </div>
       </div>
