Add mail conditions

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -93,6 +93,7 @@
                   id="email"
                   name="email"
                 /><br>
+                <div class="error emailError"></div>
               </div>
               <div
                 class="formData">
