--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -63,7 +63,7 @@
               onsubmit="return validate();"
             >
               <div
-                class="formData">
+                class="formData" data-error-visible="false" data-error="test error" id="firstName">
                 <label for="first" class="prenom">Prénom</label><br>
                 <input
                   class="text-control"
