--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -63,7 +63,7 @@
               onsubmit="return validate();"
             >
               <div
-                class="formData" data-error-visible="false" data-error="test error" id="firstName">
+                class="formData" id="firstNameInput">
                 <label for="first" class="prenom">Prénom</label><br>
                 <input
                   class="text-control"
@@ -72,10 +72,9 @@
                   name="first"
                   minlength="2"
                 /><br>
-                <div class="error firstError"></div>
               </div>
               <div
-                class="formData">
+                class="formData" id="lastNameInput">
                 <label for="last">Nom</label><br>
                 <input
                   class="text-control"
@@ -85,7 +84,7 @@
                 /><br>
               </div>
               <div
-                class="formData">
+                class="formData" id="emailInput">
                 <label for="email">E-mail</label><br>
                 <input
                   class="text-control"
@@ -93,10 +92,9 @@
                   id="email"
                   name="email"
                 /><br>
-                <div class="error emailError"></div>
               </div>
               <div
-                class="formData">
+                class="formData" id="birthdateInput">
                 <label for="birthdate">Date de naissance</label><br>
                 <input
                   class="text-control"
@@ -106,13 +104,13 @@
                 /><br>
               </div>
               <div
-                class="formData">
+                class="formData" id="quantityInput">
                 <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
               </div>
               <p class="text-label">Quelles villes ?</p>
               <div
-                class="formData">
+                class="formData" id="locationInput">
                 <input
                   class="checkbox-input"
                   type="radio"
@@ -182,7 +180,7 @@
               </div>
 
               <div
-                class="formData">
+                class="formData" id="conditionsInput">
                 <input
                   class="checkbox-input"
                   type="checkbox"
