Form confirmation closable

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -209,7 +209,8 @@
             </form>
           </div>
         </div>
-        <div class="form-confirmation">
+        <div class="form-confirmation content modal-body">
+            <span class="form-confirmation-close close"></span>
             <p>Merci ! Votre réservation a été reçue.</p>
             <button class="btn-confirmation btn-submit">Fermer</button>
         </div>
