--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -210,7 +210,7 @@
           </div>
         </div>
         <div class="form-confirmation content modal-body">
-            <span class="form-confirmation-close close"></span>
+            <span class="close"></span>
             <p>Merci ! Votre réservation a été reçue.</p>
             <button class="btn-confirmation btn-submit">Fermer</button>
         </div>
