--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -209,9 +209,9 @@
             </form>
           </div>
         </div>
-        <div class="form-confirmation content modal-body">
+        <div class="form-confirmation content">
             <span class="close"></span>
-            <p>Merci ! Votre réservation a été reçue.</p>
+            <p class="confirmation-message">Merci ! Votre réservation a été reçue.</p>
             <button class="btn-confirmation btn-submit">Fermer</button>
         </div>
       </div>
