Quantity regex done

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -210,9 +210,9 @@
           </div>
         </div>
         <div class="form-confirmation content">
-            <span class="close"></span>
-            <p class="confirmation-message">Merci ! Votre réservation a été reçue.</p>
-            <button class="btn-confirmation btn-submit">Fermer</button>
+          <span class="close"></span>
+          <p class="confirmation-message">Merci ! Votre réservation a bien été reçue</p>
+          <button class="btn-confirmation btn-submit">Fermer</button>
         </div>
       </div>
     </main>
